--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,21 @@
-<!--{% extends 'layout.html' %}
-
-{% block title %}{% endblock %}
-
-
-{% block content %}
-
-  <div class="container">
-
-    <h1>{{ title }}</h1>
-    <p>Welcome to {{ title }}</p>
-
-  </div>
-
-{% endblock %}-->
-
 <!DOCTYPE html>
-<html>
+<html ng-app="loginApp">
     <head>
         <meta charset="utf-8">
-        <title>{{ title }}</title>
-        <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <title>Angular Login</title>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/app.css">
+        <link rel="stylesheet" href="/css/login.css">
 
     </head>
     <body>
-        {% block content %}
-        {% endblock %}
-        <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <script src="/scripts/login.js"></script>
-        
-        
+      <div ng-view></div>
+        <script type="text/javascript" src="/js/jquery.min.js"></script>
+        <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/js/angular.js"></script>
+        <script type="text/javascript" src="/js/angular-route.js"></script>
+        <script type="text/javascript" src="/login/login.js"></script>
+
     </body>
 </html>
