--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="/css/login.css">
 
     </head>
-    <body ng-controller="LoginController">
+    <body>
         <div ng-view></div>
 
         <script type="text/javascript" src="/js/angular.js"></script>
