--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="/css/font-awesome.min.css">
         <link rel="stylesheet" href="/css/app.css">
         <link rel="stylesheet" href="/css/login.css">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     </head>
     <body>
@@ -16,8 +17,10 @@
 
         <script type="text/javascript" src="/js/angular.js"></script>
         <script type="text/javascript" src="/js/angular-route.js"></script>
+        <script type="text/javascript" src="/js/angular-messages.js"></script>
         <script type="text/javascript" src="routeapp.js"></script>
         <script type="text/javascript" src="/login/controller.js"></script>
+        <script type="text/javascript" src="/register/controller.js"></script>
         <script type="text/javascript" src="/js/jquery.min.js"></script>
         <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 
